--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,10 +11,10 @@
         <div class="container">
             <h2 class="logo">Translatica</h2>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="{{ url_for('main.index') }}">Home</a></li>
+                <li><a href="{{ url_for('main.about') }}">About</a></li>
+                <li><a href="{{ url_for('main.profile') }}">Profile</a></li>
+                <li><a href="{{ url_for('main.login') }}">Login</a></li>
             </ul>
         </div>
     </nav>
