--- a/app/templates/about/about.html
+++ b/app/templates/about/about.html
@@ -44,11 +44,41 @@
             color: white;
             text-decoration: none;
             padding: 0.5rem 1rem;
+            transition: background-color 0.3s;
         }
 
         .nav-links li a:hover {
             background-color: #575757;
             border-radius: 5px;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #f1f1f1;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
         }
 
         main {
@@ -64,10 +94,10 @@
         p {
             font-size: 1.2rem;
             line-height: 1.6;
-            max-width: 1400px; /* Adjusted width */
+            max-width: 1400px;
             margin: 0 auto;
             padding: 0 1rem;
-            text-align: justify; /* Justified text */
+            text-align: justify;
         }
 
         footer {
@@ -100,12 +130,25 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <h2 class="logo">Translatica</h2>
+            <h2 class="logo">
+                <a href="{{ url_for('main.index') }}">
+                    <img src="{{ url_for('static', filename='img/translatica_logo.png') }}" alt="Translatica Logo" style="max-width: 250px;">
+                </a>
+            </h2>
             <ul class="nav-links">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
                 <li><a href="{{ url_for('main.about') }}">About</a></li>
-                <li><a href="{{ url_for('main.profile') }}">Profile</a></li>
-                <li><a href="{{ url_for('main.login') }}">Login</a></li>
+                {% if username %}
+                    <li class="dropdown">
+                        <a href="javascript:void(0)">{{ username }}</a>
+                        <div class="dropdown-content">
+                            <a href="{{ url_for('main.profile') }}">Profile</a>
+                            <a href="{{ url_for('main.logout') }}">Logout</a>
+                        </div>
+                    </li>
+                {% else %}
+                    <li><a href="{{ url_for('main.login') }}">Login</a></li>
+                {% endif %}
             </ul>
         </div>
     </nav>
